--- a/neonlights-palette.scss
+++ b/neonlights-palette.scss
@@ -2,8 +2,7 @@
 @use '@angular/material' as mat;
 
 $neonlights-palette: (
-  primary: (
-    0: #000000,
+  primary: (0: #000000,
     10: #210d4b,
     20: #362561,
     25: #42316d,
@@ -20,8 +19,7 @@ $neonlights-palette: (
     99: #fffbff,
     100: #ffffff,
   ),
-  secondary: (
-    0: #000000,
+  secondary: (0: #000000,
     10: #210d4b,
     20: #362561,
     25: #42316d,
@@ -38,8 +36,7 @@ $neonlights-palette: (
     99: #fffbff,
     100: #ffffff,
   ),
-  tertiary: (
-    0: #000000,
+  tertiary: (0: #000000,
     10: #210d4b,
     20: #362561,
     25: #42316d,
@@ -56,8 +53,7 @@ $neonlights-palette: (
     99: #fffbff,
     100: #ffffff,
   ),
-  neutral: (
-    0: #000000,
+  neutral: (0: #000000,
     10: #210d4b,
     20: #362561,
     25: #42316d,
@@ -84,8 +80,7 @@ $neonlights-palette: (
     94: #f3eaff,
     96: #f8f1ff,
   ),
-  neutral-variant: (
-    0: #000000,
+  neutral-variant: (0: #000000,
     10: #210d4b,
     20: #362561,
     25: #42316d,
@@ -102,8 +97,7 @@ $neonlights-palette: (
     99: #fffbff,
     100: #ffffff,
   ),
-  error: (
-    0: #000000,
+  error: (0: #000000,
     10: #210d4b,
     20: #362561,
     25: #42316d,
@@ -149,9 +143,7 @@ $tertiary-palette: map.merge(map.get($neonlights-palette, tertiary), $_rest);
 }
 
 @mixin high-contrast-overrides($theme-type) {
-  @include mat.theme-overrides(
-    (
-      primary: _high-contrast-value(#32215c, #f5edff, $theme-type),
+  @include mat.theme-overrides((primary: _high-contrast-value(#32215c, #f5edff, $theme-type),
       on-primary: _high-contrast-value(#ffffff, #000000, $theme-type),
       primary-container: _high-contrast-value(#503f7b, #ccb8fe, $theme-type),
       on-primary-container: _high-contrast-value(#ffffff, #0f0033, $theme-type),
@@ -200,6 +192,5 @@ $tertiary-palette: map.merge(map.get($neonlights-palette, tertiary), $_rest);
       on-error-container: _high-contrast-value(#ffffff, #0f0033, $theme-type),
       surface-variant: _high-contrast-value(#e9ddff, #4d3c79, $theme-type),
       on-surface-variant: _high-contrast-value(#000000, #ffffff, $theme-type),
-    )
-  );
+    ));
 }
