--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,36 @@
 <div class="app-container">
-  <img class="app-landing" *ngIf="this.isLanding" [src]="this.LandingURL" />
 
-  <button mat-button class="app-login-button" *ngIf="this.isEnter" (click)="this.navLogin()">
+  @if (this.isLanding){
+
+  <img class="app-landing" [src]="this.LandingURL" />
+
+  }
+
+  @if (this.isEnter){
+
+  <button mat-button class="app-login-button" (click)="this.navLogin()">
     <p>LOGIN</p>
   </button>
 
-  <app-component-login class="app-login" *ngIf="this.isLogin" (login)="onLogin()" (newuser)="onNewUser()">
+  }
+
+  @if (this.isLogin){
+
+  <app-component-login class="app-login" (login)="onLogin()" (newuser)="onNewUser()">
   </app-component-login>
 
-  <app-component-new-user class="app-new-user" *ngIf="this.isNew" (notify)="navLogin()"> </app-component-new-user>
+  }
 
-  <router-outlet *ngIf="this.isLoaded" />
+  @if (this.isNew){
+
+  <app-component-new-user class="app-new-user" (notify)="navLogin()"> </app-component-new-user>
+
+  }
+
+  @if (this.isLoaded){
+
+  <router-outlet />
+
+  }
+
 </div>
