--- a/src/app/component/aindexComponent/aindex.component.scss
+++ b/src/app/component/aindexComponent/aindex.component.scss
@@ -52,7 +52,7 @@
 }
 
 .aindex-listed-container {
-  flex: 1 1 96%;
+  flex: 1 1 auto;
   display: flex;
   flex-direction: column;
   overflow-y: scroll;
@@ -61,15 +61,15 @@
 }
 
 .aindex-article-card {
-  flex: 0 0 auto;
-  height: auto;
+  flex: 1 0 auto;
+  max-height: 11em;
   overflow: hidden;
   display: flex;
   flex-direction: row;
 }
 
 .article-content {
-  flex: 0 1 67%;
+  flex: 0 1 auto;
   display: flex;
   flex-direction: column;
   padding: 0.4em;
@@ -77,15 +77,34 @@
   background-color: whitesmoke;
 }
 
+.article-image {
+  flex: 0 0 15.5em;
+  max-height: 11em;
+  min-width: 15.5em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  background-color: black;
+}
+
+.article-image img {
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: contain;
+}
+
 .article-title {
-  flex: 0 0 1.6em;
-  font-size: 1.2em;
-  max-height: 3.4em;
-  overflow-wrap: normal;
-  word-break: normal;
+  flex: 1 0 1.4em;  
+  font-size: 1.2em;      
+  max-height: 3em;  
+  min-width: 100%;   
+  white-space: normal;
+  word-break: break-word;       
+  overflow-wrap: break-word;
   overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
+  text-overflow: ellipsis;      
+  display: inline-block;               
   border-bottom: 1px solid black;
 }
 
@@ -128,11 +147,6 @@
   padding-top: 0.5em;
   font-size: 0.6em;
   border-top: 1px solid black;
-}
-
-.article-image {
-  flex: 0 1 auto;
-  width: 32.6%;
 }
 
 .aindex-footer {
