--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -7,6 +7,13 @@
   background-color: black;
 }
 
+.app-splash {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
+}
+
 .app-landing {
   position: absolute;
   top: 0px;
