--- a/src/app/component/contactComponent/contact.component.scss
+++ b/src/app/component/contactComponent/contact.component.scss
@@ -133,7 +133,7 @@ textarea {
 
 .contact-issue-picture {
   flex: 0 0 90%;
-  background-image: url('../../../../public/camera.webp');
+  background-image: url('/camera.webp');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
