--- a/src/app/component/loginComponent/login.component.scss
+++ b/src/app/component/loginComponent/login.component.scss
@@ -12,7 +12,7 @@
   height: 50%;
   left: 35%;
   width: 30%;
-  background-image: url('../../../../public/LoginCard.webp');
+  background-image: url('/LoginCard.webp');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
