--- a/src/app/component/aindexComponent/aindex.component.html
+++ b/src/app/component/aindexComponent/aindex.component.html
@@ -40,7 +40,7 @@
         </div>
 
         <div class="article-image">
-          <img [src]="SERVER_URI + '/images/' + article.ArticleImage" alt="Article Image" />
+          <img [src]="IMAGE_REPO + article.ArticleImage" alt="Article Image" />
         </div>
 
       </div>
