--- a/src/app/component/anewComponent/anew.component.html
+++ b/src/app/component/anewComponent/anew.component.html
@@ -20,7 +20,7 @@
       
       <img
         class="anew-image"
-        [src]="SERVER_URI + '/images/' + this.pictureURL"
+        [src]="IMAGE_REPO + this.pictureURL"
         alt="Article Image"
         (click)="this.onFileSelectTriggered()"
       />
