--- a/src/app/component/areaderComponent/areader.component.html
+++ b/src/app/component/areaderComponent/areader.component.html
@@ -9,7 +9,7 @@
     </div>
 
     <div class="areader-journal-info">
-      <img class="areader-image" [src]="SERVER_URI + '/images/' + CurrentArticle?.ArticleImage" alt="Article Image" />
+      <img class="areader-image" [src]="IMAGE_REPO + CurrentArticle?.ArticleImage" alt="Article Image" />
 
       <div class="areader-details">
         <p>
