--- a/src/app/component/findexComponent/findex.component.html
+++ b/src/app/component/findexComponent/findex.component.html
@@ -45,7 +45,7 @@
         </div>
 
         <div class="thread-image">
-          <img [src]="SERVER_URI + '/images/' + thread.ThreadUserAvatar" alt="Thread Image" />
+          <img [src]="IMAGE_REPO + thread.ThreadUserAvatar" alt="Thread Image" />
         </div>
 
       </div>
