--- a/src/app/component/fnewComponent/fnew.component.html
+++ b/src/app/component/fnewComponent/fnew.component.html
@@ -20,7 +20,7 @@
 
       <img
         class="fnew-image"
-        [src]="SERVER_URI + '/images/' + this.pictureURL"
+        [src]="IMAGE_REPO + this.pictureURL"
         alt="Thread Image"
         (click)="this.onFileSelectTriggered()"
       />
