--- a/src/app/component/replyComponent/reply.component.html
+++ b/src/app/component/replyComponent/reply.component.html
@@ -18,7 +18,7 @@
             </div>
 
             <div class="user-image">
-                <img [src]="SERVER_URI + '/images/' + CurrentUser.Avatar" alt="User Image" />
+                <img [src]="IMAGE_REPO + CurrentUser.Avatar" alt="User Image" />
             </div>
 
         </div>
