--- a/src/app/component/freaderComponent/freader.component.html
+++ b/src/app/component/freaderComponent/freader.component.html
@@ -40,7 +40,7 @@
             </div>
 
             <div class="user-image">
-              <img [src]="IMAGE_REPO + post.PostUserAvatar" alt="Thread Image" />
+              <img [src]="IMAGE_REPO + '/' + post.PostUserAvatar" alt="Thread Image" />
             </div>
 
           </div>
